# Ricky-MCP-Remote

./: LICENSE  README.md  main.py  pyproject.toml
prompts/: server_instructions.md  write_complete_ppr.md
